# socketfinder

./: .gitignore  playbook.yml  pyproject.toml  readme.md  report.py  requirements.txt
inventory/: dev.yaml
roles/sslscan/: ignored_sockets.yml
roles/sslscan/files/: discover_sockets.py  tls_scan.py
roles/sslscan/tasks/: discover_sockets.yml  main.yml  scan_tls.yml  write_csv.yml
roles/sslscan/templates/: csv_header.j2
templates/: report.html.j2
