[project]
name = "socketfinder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.7",
    "jinja2>=3.1.6",
    "pandas>=2.3.3",
    "python-dateutil>=2.9.0.post0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.11",
]
